deltag button visiblity fixed

--- a/app/components/entries/EntryCard.module.css
+++ b/app/components/entries/EntryCard.module.css
@@ -91,7 +91,7 @@
 }
 @media (max-width: 480px) {
   .card {
-    width: 100%;
+    width: 40%;
   }
 }
 @media (min-width: 481px) and (max-width: 900px) {
